Loading z-index fix

--- a/src/components/Skeleton/Skeleton.module.scss
+++ b/src/components/Skeleton/Skeleton.module.scss
@@ -32,7 +32,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 10;
 }
 
 .animated {
