--- a/src/ducks/Chart/Loader/Loader.module.scss
+++ b/src/ducks/Chart/Loader/Loader.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   font-size: 8px;
-  z-index: 100;
+  z-index: 10;
 
   &::before {
     content: '';
